[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "yada"
version = "0.1.0"
description = "yet another dir analyzer, get an overview of your project structure, files, and codebase contents."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Saifullah Balghari", email = "sbalghari@proton.me" }]
dependencies = [
    "pathlib>=1.0.1",
    "pathspec>=1.0.4",
    "pyfiglet>=1.0.4",
    "rich>=15.0.0",
    "textual>=8.2.4",
    "typer>=0.24.1",
]

[project.scripts]
yada = "yada:cli"

[tool.uv]
package = true

[tool.ruff]
src = ["."]
line-length = 79
target-version = "py311"

[dependency-groups]
dev = ["mypy>=1.20.0", "pytest>=9.0.3", "ruff>=0.15.10", "ty>=0.0.29"]
